[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/weapon/staff/assets/weapon_green_magic_staff.png" type="Texture" id=2]
[ext_resource path="res://scenes/weapon/staff/Staff.gd" type="Script" id=3]

[sub_resource type="Animation" id=1]
resource_name = "Attack"
length = 0.4
step = 0.05
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.125, 0.4 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 5, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.125, 0.4 )
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[node name="Weapon" type="Node2D"]
script = ExtResource( 3 )

[node name="Pivot" type="Node2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Pivot"]
anims/Attack = SubResource( 1 )
anims/RESET = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="Pivot"]
position = Vector2( 0, -19 )
scale = Vector2( 1, 1.25 )
texture = ExtResource( 2 )

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="ShootSpawner" type="Node2D" parent="."]
position = Vector2( 0, -37 )
rotation = 1.5708

[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
